ci: github deploy pages

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "rollup": "rollup -c",
     "test": "jest",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build -o docs-build -s ./src/assets"
   },
   "files": [
     "dist"
